[package]
name = "keeper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "keeper"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# todo switch to an official release before launch
anchor-lang = { git = "https://github.com/microwavedcola1/anchor.git", branch = "master-debug" }
# todo switch to an official release before launch
anchor-spl = { git = "https://github.com/microwavedcola1/anchor.git", branch = "master-debug", features = ["governance"]}
solana-program = "^1.8.1"
static_assertions = "1.1"

[dev-dependencies]
solana-sdk = "^1.8.1"
solana-program-test = "^1.8.1"
solana-logger = "^1.8.1"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
bytemuck = "^1.7.2"
thiserror = "^1.0.24"